using System;

namespace SquaresGame.Persistence
{
    public class SquaresGameDataException : Exception
    {
        public SquaresGameDataException() { }
    }
}
